--- a/index.html
+++ b/index.html
@@ -3,57 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
+    <title>Watch Something With Kash</title>
     <style>
         body {
-            margin: 0;
+            background-color: #121212; /* Light black background */
+            color: #ffffff; /* White text */
             font-family: Arial, sans-serif;
-            height: 100vh;
-            background: linear-gradient(to bottom right, #ff7e5f, #feb47b); /* Gradient background */
-            color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
+            text-align: center;
+            margin: 0;
             padding: 20px;
         }
-
         h1 {
-            margin-top: 20px;
+            margin: 20px 0;
             font-size: 2.5em;
         }
-
-        /* Menu Button */
-        .menu {
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            margin-top: 20px;
-            padding: 10px;
+        iframe {
+            width: 80%;
+            height: 450px; /* Adjust height as needed */
+            border: none;
+            margin: 20px 0;
+            background-color: #333; /* Background for iframe */
         }
-
-        .menu div {
-            width: 35px;
-            height: 5px;
-            background-color: white;
-            margin: 4px 0;
-            transition: background 0.3s;
+        .telegram-button {
+            display: inline-flex;
+            align-items: center;
+            background-color: #0088cc; /* Telegram button color */
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1.2em;
+            margin: 20px 0;
         }
-
-        .menu div:hover {
-            background-color: #ffdd57; /* Change color on hover */
+        .telegram-button img {
+            width: 20px; /* Adjust size of the logo */
+            margin-right: 8px;
         }
     </style>
 </head>
 <body>
 
-    <div class="menu">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <h1>Watch Something With Kash</h1>
 
-    <h1>Welcome to Another Life</h1>
+    <!-- Replace YOUR_STREAM_URL with your actual streaming URL -->
+    <iframe src="" allowfullscreen></iframe>
+
+    <a class="telegram-button" href="https://t.me/YOUR_TELEGRAM_CHANNEL" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Telegram_logo.svg" alt="Telegram Logo"> 
+        Join us on Telegram
+    </a>
 
 </body>
 </html>
