--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <h1>Watch Something With Kash</h1>
 
     <!-- Replace YOUR_STREAM_URL with your actual streaming URL -->
-    <iframe src="" allowfullscreen></iframe>
+    <iframe src="https://prod-sports-eng-cf.jiocinema.com/hls/live/2100306/hd_akamai_merged_avc_eng_cricket_m1_111024/master.m3u8" allowfullscreen></iframe>
 
-    <a class="telegram-button" href="https://t.me/YOUR_TELEGRAM_CHANNEL" target="_blank">
+    <a class="telegram-button" href="https://t.me/NietGroup" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Telegram_logo.svg" alt="Telegram Logo"> 
         Join us on Telegram
     </a>
