--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: flex-start;
             align-items: center;
             height: 100vh;
-            overflow: hidden;
         }
+
+        /* Full-screen popup */
         #popup {
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.9);
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.95);
             color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            text-align: center;
             z-index: 9999;
+            text-align: center;
         }
         #popup button {
             margin: 10px;
@@ -50,47 +50,45 @@
             background-color: #28a745;
             color: white;
         }
+
+        /* Header text */
+        #header {
+            font-size: 28px;
+            font-weight: bold;
+            margin: 20px 0;
+            text-align: center;
+            color: white;
+        }
+
+        /* Streaming container */
         #streaming-container {
             display: none;
-            position: relative;
             width: 100%;
             max-width: 800px;
-        }
-        #cricket-sparx {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px;
-            font-size: 18px;
-            font-weight: bold;
+            margin: 20px auto;
             text-align: center;
-            z-index: 10;
         }
         video {
-            display: block;
             width: 100%;
             height: auto;
             border: 1px solid white;
-        }
-        a {
-            color: lightblue;
-            text-decoration: none;
         }
     </style>
 </head>
 <body>
 
+<!-- Header Text -->
+<div id="header">CricketSparx</div>
+
+<!-- Full-Screen Popup -->
 <div id="popup">
-    <p>Join our Telegram channel <a href="https://t.me/CricketSparx" target="_blank">@CricketSparx</a> for more links!</p>
+    <p>Join our Telegram channel <a href="https://t.me/CricketSparx" target="_blank" style="color: lightblue; text-decoration: none;">@CricketSparx</a> for more links!</p>
     <button id="join-now" onclick="joinNow()">Join Now</button>
     <button id="already-joined" onclick="closePopup()">Already Joined</button>
 </div>
 
+<!-- Streaming Video -->
 <div id="streaming-container">
-    <div id="cricket-sparx">CricketSparx</div>
     <video controls>
         <source id="videoSource" src="" type="application/x-mpegURL">
         Your browser does not support the video tag.
